@@ -6,7 +6,7 @@ copyright_year   = 2018
 version          = 0.09
 
 [@Author::Plicease]
-:version       = 2.26
+:version       = 2.47
 travis_status  = 1
 release_tests  = 1
 installer      = Author::Plicease::MakeMaker
@@ -36,3 +36,5 @@ contributor = Ville Skyttä (SCOP)
 
 [PruneFiles]
 filename = log4cplus.properties
+
+[Deprecated]
